$Id$

2014-06-22  Christian Franke  <franke@computer.org>

	atacmds.cpp, ataprint.cpp: Improve messages for unsupported SMART Status
	command.

2014-06-21  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron M500/M510/M550 Client SSDs
	- Micron M500DC Enterprise SSDs
	Based on patch provided by Clayton Hawkings from Micron.

2014-06-20  Christian Franke  <franke@computer.org>

	autogen.sh: automake 1.14.1 works.

2014-06-20  Christian Franke  <franke@computer.org>

	scsiata.cpp: usbjmicron_device: Check SCSI resid for SMART STATUS.
	Some (Prolific) USB bridges do not transfer a status byte.
	os_win32.cpp: Include SCSI resid in debug output.

2014-06-19  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp:
	- minor comment clean-up

2014-06-19  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Intel 730 and DC S3500/S3700 Series SSDs: rename, add 730 and S3700.
	Remove extra S3700 entry.  Based on patch provided by Tim Small.

2014-06-18  Christian Franke  <franke@computer.org>

	os_win32.cpp: Fix CSMI support for older Intel RST drivers which set
	bPortIdentifier=0xff (regression from r3888).
	os_win32/installer.nsi: Create standard InstallLocation registry entry.
	Keep old Install_Dir entry if needed for GSmartControl.
	Update links in registry and shortcuts.

2014-06-18  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Buffalo MiniStationHD-PCFU3 (0x0411:0x0240)
	- USB: Toshiba Stor.E Plus (0x0480:0xa00a) (Debian bug 734395)
	- USB: Samsung D3 Station (0x04e8:0x6124) (ticket #332)
	- USB: Samsung M3 Portable (0x04e8:0x61b[45])
	- USB: Seagate Expansion Portable (0x0bc2:0x2312)
	- USB: Seagate Expansion External (0x0bc2:0x3312) (ticket #320)
	- USB: WD Elements (0x1058:0x10[ab]8) (ticket #331)
	- USB: ASMedia AS2105 (0x174c:0x5136)

2014-06-16  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Seagate Laptop Thin HDD
	- Seagate Barracuda 7200.14 (AF): *DM000 variant